# Data-flow-project

./: CMakeLists.txt  README.md  config.txt
code/include/: Compiler.h  Configuration.h  Memory.h  Strategy.h
code/source/: Compiler.cpp  Configuration.cpp  Machine.cpp  Main.cpp  Memory.cpp  Operation.cpp  Strategy.cpp
include/: Compiler.h  Configuration.h  Exceptions.h  Logger.h  Machine.h  Memory.h  Operation.h  Writer.h
lib/lib/include/tss/: FlowSource.h
lib/lib/source/concepts/: Visitor.cpp
source/: Compiler.cpp  Config.cpp  Machine.cpp  Main.cpp  Memory.cpp  Operation.cpp  Writer.cpp
